# sour

./: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 4ba4ef1bc9b8_add_timestamps_to_all_tables.py  7ab7ef33d9e1_create_stocks_tables.py
app/: config.py  logging_config.py  main.py  worker.py
app/api/v1/: jobs.py  router.py
app/crud/: crud_stock.py
app/db/: session.py
app/dependencies/: client.py
app/models/: __init__.py  stocks.py
app/services/: stock_services.py
app/tasks/: __init__.py  stock_tasks.py
